smoothness and overflow issue done alignment(responsive pending)

--- a/src/Components/Stry/SliderComponent.css
+++ b/src/Components/Stry/SliderComponent.css
@@ -97,7 +97,7 @@ button:focus {
     background-color: #5d2f2fd1;
     z-index: 20;
     overflow: hidden;
-    transform: translate(calc((100 - var(--scroll-perc)) * .5%), 0) skewY(calc(var(--scroll-y) * var(--scroll-vel) * 2deg));
+    transform: translate(calc((170 - var(--scroll-perc)) * .25%), 0) skewY(calc(var(--scroll-y) * var(--scroll-vel) * 2deg));
 }
 
 .o-slider__item:nth-child() {
@@ -106,16 +106,16 @@ button:focus {
 
 .o-slider__img {
     position: absolute;
-    top: 110%;
+    top: 105%;
     left: 17%;
     filter: brightness(100%);
     display: block;
     width: 80%;
-    height: 100%;
+    height: 120%;
     object-fit: cover;
     z-index: 5;
     object-position: 50% 50%;
-    transform: scale(1.1);
+    transform: scale(1);
     transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -310,7 +310,7 @@ button:focus {
     top: 115%;
     left: 12%;
 } */
-.vineet-style .slider__desc{
+/* .vineet-style .slider__desc{
     left: -33%;
     font-size: 19px;
 }
@@ -459,7 +459,7 @@ font-size: 65px;
         font-size: 18px;
     }
  /* 2024*/
-    .o-slider__title-2024 span{
+    /* .o-slider__title-2024 span{
         left: 8%;
      }
    
@@ -599,7 +599,7 @@ font-size: 65px;
     .Reveal-style .speaker_desg{
         top: 27%;
         left: -34%;
-    }
+    } */
   /*   .vineet-style .speaker-name{
         font-size: 65px;
     }
@@ -620,7 +620,7 @@ font-size: 65px;
       width: 25px;
     } */
 
-    .vineet-style .speaker_desg{
+    /* .vineet-style .speaker_desg{
         width: 22vw;
         left: -21.5%;
     }
@@ -642,7 +642,7 @@ font-size: 65px;
     }
 
  /*2024 */
- .Abhishek .slider__desc{
+ /* .Abhishek .slider__desc{
     left: -27%;
 }
 .Abhishek .speaker_desg{
@@ -717,8 +717,8 @@ font-size: 65px;
 
 
 
-}
-@media(max-width:1080px){
+} */
+/* @media(max-width:1080px){
     .speaker-name{
         font-size: 44px;
     }
@@ -826,7 +826,7 @@ font-size: 65px;
 }
 
     
-}
+}  */
 
 /*
 {
@@ -905,4 +905,4 @@ font-size: 65px;
         left: -2%;
     }
 
-} */
+} */ 
